# MoonCoding

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  README.md
.cursor/rules/: mooncoding-dev-workflow.mdc
.cursor/skills/lyra-adb/: SKILL.md
.cursor/skills/mooncoding-self-contained/: SKILL.md
cmake/: lyra-rk3506-toolchain.cmake
scripts/: S99mooncoding  aic-powersave-off.sh  linux-smoke.sh  lyra-adb-deploy.ps1  lyra-board-smoke.ps1  lyra-cross-build.sh  lyra-link-qt-libs.sh  lyra-relaunch.sh  lyra-run-mooncoding.sh  mooncoding-babysit.sh  wifi-watchdog.sh
scripts/buildroot/: build-qt6webengine.sh  continue-webengine-build.sh  ensure-host-nss.sh  finish-webengine-widgets.sh  fix-sysroot-path-doubling.sh  fix-webengine-process-time-abi.sh  force-webengine-build.sh  install-host-gn.sh  install-qt6webengine.sh  patch-host-qt6base-gui.sh  patch-webengine-time-abi.sh  rebuild-qt6base-network-then-webengine.sh  rebuild-qt6webengine-only.sh  rebuild-webengine-html5lib.sh  resume-webengine-build.sh  seed-khronos-headers.sh  stage-qt6webengine.sh  start-webengine-only.sh  wait-qt6webengine.sh
scripts/buildroot/qt6/qt6declarative/: Config.in  qt6declarative.hash  qt6declarative.mk
scripts/buildroot/qt6/qt6shadertools/: Config.in  qt6shadertools.hash  qt6shadertools.mk
scripts/buildroot/qt6/qt6webchannel/: Config.in  qt6webchannel.hash  qt6webchannel.mk
scripts/buildroot/qt6/qt6webengine/: 0001-fix-determineDownloadPath-qint64-abi.patch  Config.in  qt6webengine.hash  qt6webengine.mk
scripts/buildroot/smoke-web-preview/: app.js  backend.py  index.html  styles.css
vibe/: Cargo.toml  README.md
vibe-agent/: .env.example  .mooncoding.toml  ARCHITECTURE.md  Cargo.toml  launch.py
vibe-agent/include/: vibe_agent.h
vibe-agent/prompts/: agent.md
vibe-agent/sdk/python/: mooncoding_app.py
vibe-agent/src/: agent.rs  apps.rs  config.rs  desktop.rs  encoding_util.rs  ffi.rs  lib.rs  main.rs  preview_backend.rs  prompt.rs  provider.rs  session.rs  stream.rs  token_est.rs  tree.rs  vector.rs
vibe-agent/src/app_runtime/: mod.rs  protocol.rs  sandbox.rs
vibe-agent/src/capabilities/: gpio.rs  mod.rs
vibe-agent/src/tools/: apps.rs  bash.rs  blockgate.rs  glob.rs  grep.rs  memory.rs  mod.rs  paths.rs  preview_backend.rs  read.rs  todowrite.rs  tree.rs  vibe.rs  write.rs
vibe-agent/src/tui/: chat.rs  diff.rs  input.rs  markdown.rs  mod.rs  side.rs  status.rs  syntax.rs
vibe-test/: .gitignore  Cargo.toml
vibe-test/fixtures/specs/: 01-todo-min.yaml  02-todo-with-css.yaml  03-todo-refactor.yaml
vibe-test/fixtures/website/: README.md
vibe-test/prompts/: system_prompt.md
vibe-test/src/: db.rs  llm.rs  main.rs  prompts.rs  report.rs  runner.rs  session.rs  tools.rs
vibe-ui/: CMakeLists.txt
vibe-ui/reference/opencode-port/: CMakeLists.txt  build_demo.ps1  build_demo.sh  opencode_antialias.h  opencode_chat_widget.cpp  opencode_chat_widget.h  opencode_composer.cpp  opencode_composer.h  opencode_demo_main.cpp  opencode_dialog_overlay.cpp  opencode_dialog_overlay.h  opencode_diff_view.cpp  opencode_diff_view.h  opencode_file_tree.cpp  opencode_file_tree.h  opencode_home_widget.cpp  opencode_home_widget.h  opencode_input_widget.cpp  opencode_input_widget.h  opencode_session_view.cpp  opencode_session_view.h  opencode_settings_dialog.cpp  opencode_settings_dialog.h  opencode_styles.qss  opencode_tab_bar.cpp  opencode_tab_bar.h  opencode_tool_block.cpp  opencode_tool_block.h
vibe-ui/resources/: app.qrc
vibe-ui/resources/board/: board-net-ready.sh
vibe-ui/resources/certs/: cacert.pem
vibe-ui/resources/styles/: dark.qss  light.qss
vibe-ui/src/: languagemanager.cpp  languagemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  opencode_antialias.h  rustbridge.cpp  rustbridge.h
vibe-ui/src/apps/: apphostwidget.cpp  apphostwidget.h  apprunner.cpp  apprunner.h  appschemarenderer.cpp  appschemarenderer.h  appswidget.cpp  appswidget.h
vibe-ui/src/chat/: chatwidget.cpp  chatwidget.h
vibe-ui/src/input/: boardime.cpp  boardime.h  googlepinyinengine.cpp  googlepinyinengine.h  inputwidget.cpp  inputwidget.h  softkeyboard.cpp  softkeyboard.h  touchscroll.cpp  touchscroll.h
vibe-ui/src/settings/: boardnetrecover.cpp  boardnetrecover.h  modelfetcher.cpp  modelfetcher.h  wifipanel.cpp  wifipanel.h
vibe-ui/src/tree/: nodedialog.cpp  nodedialog.h  treemodel.cpp  treemodel.h  treewidget.cpp  treewidget.h
vibe-ui/tests/: treemodel_test.cpp
vibe-ui/translations/: mooncoding_en.ts
vibe/examples/: sample.py  sample.py.vbs  simple.py  simple.py.vbs
vibe/src/: assemble.rs  deps.rs  embed.rs  format.rs  main.rs  split.rs
vibe/test/: suite.ps1
vibe/test/json/: drop.tmpl.json  insert.json  insert.tmpl.json  nopd.json  replace.tmpl.json  stale.json
vibe/test/setup/: comment_def.py  cpp_sample.cpp  error_syntax.py  fake_def.py  multi_deco.py  rust_sample.rs  zh.py
