[package]
name = "vibe-agent"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI coding agent powered by the vibe block-set protocol"

[[bin]]
name = "vibe-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
async-trait = "0.1"
toml = "0.8"
regex = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
rustyline = "18.0.1"
colored = "3.1.1"
indicatif = "0.18.6"
ratatui = "0.30.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
pulldown-cmark = "0.13"
syntect = { version = "5.3.0", features = ["default-fancy"] }
similar = "3.1.1"
arboard = "3.6.1"

[profile.release]
opt-level = 2
