[package]
name = "vibe-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Rust backend for the MoonCoding Qt desktop agent"

[features]
default = []
legacy-cli = [
    "dep:rustyline",
    "dep:colored",
    "dep:ratatui",
    "dep:crossterm",
    "dep:pulldown-cmark",
    "dep:syntect",
    "dep:similar",
    "dep:arboard",
]

[lib]
name = "vibe_agent"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "vibe-agent"
path = "src/main.rs"
required-features = ["legacy-cli"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
async-trait = "0.1"
toml = "0.8"
regex = "1"
walkdir = "2"
rustyline = { version = "18.0.1", optional = true }
colored = { version = "3.1.1", optional = true }
ratatui = { version = "0.30.2", optional = true }
crossterm = { version = "0.29.0", features = ["event-stream"], optional = true }
pulldown-cmark = { version = "0.13", optional = true }
syntect = { version = "5.3.0", features = ["default-fancy"], optional = true }
similar = { version = "3.1.1", optional = true }
arboard = { version = "3.6.1", optional = true }

[profile.release]
opt-level = 2
