[package]
name = "vibe-test"
version = "0.1.0"
edition = "2021"
description = "Test runner that lets an LLM (DeepSeek) drive the vibe CLI autonomously"

[[bin]]
name = "vibe-test"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
regex = "1"

[profile.release]
opt-level = 2