[package]
name = "vibe"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "block-set vibe coding CLI (feasibility prototype)"

[[bin]]
name = "vibe"
path = "src/main.rs"

[profile.release]
opt-level = 2

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tree-sitter = "0.26.10"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-cpp = "0.23.4"
ulid = "1.2.1"
